# wxoa.rs

./: .editorconfig  Cargo.toml  README.md  Rocket.toml  build.sh  db.sql  diesel.toml  diesel_migration.sh  run.sh  rust-toolchain
migrations/2020-12-11-152912_t_user_info/: down.sql  up.sql
migrations/2020-12-11-152939_t_user_details_info/: down.sql  up.sql
sms_service/: Cargo.toml
sms_service/src/: lib.rs
sms_service/tests/: mod.rs  sms_service_tests.rs
src/: main.rs  models.rs  schema.rs
src/commands_handlers/: mod.rs
src/datetime_utils/: mod.rs
src/excel_utils/: mod.rs
src/multipart_utils/: mod.rs
src/wx_utils/: mod.rs  parse_xml_msg.rs
templates/: index.html.hbs
