[package]
name = "wxoa"
version = "0.1.0"
authors = ["zayfen <zhangyunfeng0101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.3", features = ["mysql"] }
url = "2.2.0"
log = "0.4"
xml-rs = "0.8"
dotenv = "0.10"
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4.19"
diesel_migrations = "1.3"
diesel_codegen = { version = "0.16.0", features = ["mysql"] }
sms_service = { version = "0.1.0", path = "sms_service" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates", "serve", "diesel", "diesel_mysql_pool", "json"]

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
rand = "0.6"
