[package]
name = "sms_service"
version = "0.1.0"
authors = ["zayfen <zhangyunfeng0101@gmail.com>"]
edition = "2018"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10",default-features = false,  features = ["rustls-tls", "blocking", "json"] }
serde_json = "1.0"
actix-rt = "*"
redis = "0.17.0"

[dev-dependencies]
tokio-test = "*"

